Added localized buttons

--- a/deploy/htdocs/version/src/data/locale/en_US.json
+++ b/deploy/htdocs/version/src/data/locale/en_US.json
@@ -1,7 +1,9 @@
 {
 	"global": {
 		"cta": {
-
+			"start_advertising_today": "Start advertising today",
+			"menu": "Menu",
+			"to_reach": "1-884-to-reach"
 		},
 		"form": {
 			"placeholder": {
