--- a/deploy/htdocs/version/src/data/locale/en_US.json
+++ b/deploy/htdocs/version/src/data/locale/en_US.json
@@ -3,7 +3,8 @@
 		"cta": {
 			"start_advertising_today": "Start advertising today",
 			"menu": "Menu",
-			"to_reach": "1-884-to-reach"
+			"to_reach": "1-884-to-reach",
+			"next": "Next"
 		},
 		"form": {
 			"placeholder": {
