--- a/deploy/htdocs/version/src/data/locale/en_US.json
+++ b/deploy/htdocs/version/src/data/locale/en_US.json
@@ -1,6 +1,9 @@
 {
 	"global": {
 		"cta": {
+			"ok": "Ok",
+			"yes": "Yes",
+			"no": "No",
 			"start_advertising_today": "Start advertising today",
 			"menu": "Menu",
 			"to_reach": "1-884-to-reach",
@@ -27,7 +30,13 @@
 	},
 	"notification": {
 		"alert": {
+			"something_went_wrong": {
+				"heading": "Oops",
+				"paragraph": "Something went wrong."
+			},
+			"server_message": {
 
+			}
 		},
 		"confirmation": {
 
