split up name into first name and last name
ready
#140

--- a/deploy/htdocs/version/src/data/locale/en_US.json
+++ b/deploy/htdocs/version/src/data/locale/en_US.json
@@ -12,7 +12,8 @@
 		"form": {
 			"placeholder": {
 				"email": "Email Address",
-				"name": "Your Name",
+				"firstName": "First Name",
+				"lastName": "Last name",
 				"phone_number": "Phone Number",
 				"state": "State",
 				"city": "City",
