Update contact success message Add form reset after successfull submit

--- a/deploy/htdocs/version/src/data/locale/en_US.json
+++ b/deploy/htdocs/version/src/data/locale/en_US.json
@@ -35,6 +35,10 @@
 				"heading": "Oops",
 				"paragraph": "Something went wrong."
 			},
+			"contact_success": {
+				"heading": "Thank you!",
+				"paragraph": "We’re excited to have a chance to meet you. Your request is being directed to your personal media consultant. Expect to hear from us soon!"
+			},
 			"server_message": {
 
 			}
