[Market Map] Option says "Select a State" on mobile but all the options are cities. Need to be changed to say "Select an City"
ready #441

--- a/deploy/htdocs/version/src/data/locale/en_US.json
+++ b/deploy/htdocs/version/src/data/locale/en_US.json
@@ -28,7 +28,8 @@
 			"label": {
 			},
 			"select": {
-				"state": "Select a State"
+				"state": "Select a State",
+				"city": "Select a City"
 			}
 		}
 	},
