--- a/deploy/htdocs/version/src/data/locale/en_US.json
+++ b/deploy/htdocs/version/src/data/locale/en_US.json
@@ -18,7 +18,7 @@
 				"email": "Email Address",
 				"firstName": "First Name",
 				"lastName": "Last name",
-				"phone_number": "Phone Number (numbers only, no punctuation required)",
+				"phone_number": "Phone Number (numbers only)",
 				"state": "State",
 				"city": "City",
 				"zipcode": "ZIP Code you want to advertise in",
