--- a/source/frontend/static/locale/en-us.json
+++ b/source/frontend/static/locale/en-us.json
@@ -8,7 +8,17 @@
 	  "menu": "Menu",
 	  "customer_login": "Customer Login",
 	  "to_reach": "1-844-to-reach",
-	  "next": "Next"
+	  "next": "Next",
+	  "read_more": "Read more"
+	},
+	"article": {
+	  "stats": {
+		"read_time": "min. read",
+		"share": "share",
+		"shares": "shares",
+		"view": "view",
+		"views": "views"
+	  }
 	},
 	"notification": {
 	  "cta": {
