Fix the site frame padding Add the program module block

--- a/source/frontend/static/locale/en-us.json
+++ b/source/frontend/static/locale/en-us.json
@@ -11,6 +11,9 @@
 	  "next": "Next",
 	  "read_more": "Read more"
 	},
+	"show": {
+	  "percent": "Percent"
+	},
 	"article": {
 	  "stats": {
 		"read_time": "min. read",
