Add the contact kernel slideout panel

--- a/source/frontend/static/locale/en-us.json
+++ b/source/frontend/static/locale/en-us.json
@@ -38,6 +38,7 @@
 	"form": {
 	  "placeholder": {
 		"email": "Email Address",
+		"name": "Name",
 		"firstName": "First Name",
 		"lastName": "Last name",
 		"phone_number": "Phone Number (numbers only)",
