Add the menu slideout panel

--- a/source/frontend/static/locale/en-us.json
+++ b/source/frontend/static/locale/en-us.json
@@ -4,6 +4,7 @@
 	  "ok": "Ok",
 	  "yes": "Yes",
 	  "no": "No",
+	  "back": "Back",
 	  "start_advertising_today": "Start advertising today",
 	  "menu": "Menu",
 	  "customer_login": "Customer Login",
