Clean sticky position Add a back to top button

--- a/source/frontend/static/locale/en-us.json
+++ b/source/frontend/static/locale/en-us.json
@@ -13,7 +13,8 @@
 	  "read_more": "Read more",
 	  "share_twitter": "Share on tTwitter",
 	  "share_facebook": "Share on Facebook",
-	  "share_linkedin": "Share on LinkedIn"
+	  "share_linkedin": "Share on LinkedIn",
+	  "back_to_top": "Back to top"
 	},
 	"show": {
 	  "percent": "Percent"
