Change the contact us flow
ready #482

--- a/source/frontend/static/locale/en-us.json
+++ b/source/frontend/static/locale/en-us.json
@@ -14,7 +14,8 @@
 	  "share_twitter": "Share on tTwitter",
 	  "share_facebook": "Share on Facebook",
 	  "share_linkedin": "Share on LinkedIn",
-	  "back_to_top": "Back to top"
+	  "back_to_top": "Back to top",
+	  "contact_us": "Contact us"
 	},
 	"show": {
 	  "percent": "Percent"
