Adding marketId to Get Media Kit notification form

--- a/source/frontend/static/locale/en-us.json
+++ b/source/frontend/static/locale/en-us.json
@@ -45,7 +45,7 @@
 		"email": "Email Address",
 		"name": "Name",
 		"firstName": "First Name",
-		"lastName": "Last name",
+		"lastName": "Last Name",
 		"phone_number": "Phone Number (e.g. 555-555-5555)",
 		"state": "State",
 		"city": "City",
