Update the copy on the media kit download popup Open the market link when clicking the download button
ready #718

--- a/source/frontend/static/locale/en-us.json
+++ b/source/frontend/static/locale/en-us.json
@@ -73,7 +73,8 @@
 	  },
 	  "download_media_kit": {
 		"heading": "Thank you",
-		"paragraph": "The Spectrum Reach Media Kit will be in your inbox shortly."
+		"paragraph": "Thank you for downloading our media kit. <br/>Call 1-844-TO-REACH to get started advertising.",
+		"ok_label": "Download now"
 	  },
 	  "server_message": {
 	  }
