Changed customer login to AudienceTrak login

--- a/source/frontend/static/locale/en-us.json
+++ b/source/frontend/static/locale/en-us.json
@@ -7,7 +7,7 @@
 	  "back": "Back",
 	  "start_advertising_today": "Start advertising today",
 	  "menu": "Menu",
-	  "customer_login": "Customer Login",
+	  "customer_login": "AudienceTrak Login",
 	  "to_reach": "1-844-to-reach",
 	  "next": "Next",
 	  "read_more": "Read more",
